[gd_scene load_steps=8 format=3 uid="uid://5w4qnfy0sm6d"]

[ext_resource type="Script" uid="uid://bkbshst1sew77" path="res://scripts/projectiles/rum.gd" id="1_jloxn"]
[ext_resource type="Texture2D" uid="uid://b8rcwvt3b6q07" path="res://assets/projectiles/vedal_rum_sheet.png" id="2_h1dyh"]
[ext_resource type="PackedScene" uid="uid://3miicp8y7p5b" path="res://scenes/shared/multi_hitbox.tscn" id="2_p7ayn"]

[sub_resource type="Animation" id="Animation_yjo2d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MultiHitbox/CollisionPolygon2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MultiHitbox/CollisionPolygon2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_frlp1"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_eqtqf"]
resource_name = "spin"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MultiHitbox/CollisionPolygon2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0.0, 0.785398, 1.5708, 2.35619, 3.14159, 3.92699, 4.71239, 5.49779]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MultiHitbox/CollisionPolygon2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(-0.430408, -0.231758), Vector2(-0.194796, -0.977402), Vector2(-0.735231, -1.34476), Vector2(-0.0216916, -1.09134), Vector2(0.419654, 0.311794), Vector2(0.112385, -0.0111464), Vector2(-0.220443, 0.486445)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gwiue"]
_data = {
&"RESET": SubResource("Animation_yjo2d"),
&"hit": SubResource("Animation_frlp1"),
&"spin": SubResource("Animation_eqtqf")
}

[node name="Rum" type="Node2D"]
script = ExtResource("1_jloxn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_h1dyh")
hframes = 11

[node name="MultiHitbox" parent="." instance=ExtResource("2_p7ayn")]
collision_mask = 4
owned_by = 1

[node name="CollisionPolygon2D" parent="MultiHitbox" index="0"]
polygon = PackedVector2Array(0, -5, 0, -3, -1.01689, -2.88791, -0.803201, 2.7887, 1.82606, 2.74225, 1.95613, -2.90649, 1, -3, 1, -5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gwiue")
}

[node name="SelfDestructTimer" type="Timer" parent="."]
wait_time = 30.0

[connection signal="self_destruct" from="MultiHitbox" to="." method="_on_multi_hitbox_self_destruct"]
[connection signal="timeout" from="SelfDestructTimer" to="." method="_on_self_destruct_timer_timeout"]

[editable path="MultiHitbox"]
